Update route Appointment and backend Laravel -> API CRUD
