# php/app/Models/User.php
@@ -7,14 +7,12 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use MongoDB\Laravel\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
+use Illuminate\Support\Facades\Hash;
 
 class User extends Authenticatable
 {
     use HasApiTokens, HasFactory, Notifiable;
-    public function getTable()
-    {
-        return 'User';
-    }
+
 
     /**
      * The attributes that are mass assignable.
@@ -59,11 +57,24 @@ class User extends Authenticatable
         'email' => 'string',
         'password' => 'string',
         'dateOfBirth' => 'string',
-        'address' => 'array',
         'gender' => 'string',
         'avatar' => 'string',
         'citizenIdentificationNumber' => 'string',
         'isActive' => 'boolean',
         'isDeleted' => 'boolean',
     ];
+    public function setAddressAttribute($value)
+    {
+        // Nếu $value là mảng hoặc stdClass, giữ nguyên
+        $this->attributes['address'] = $value;
+    }
+    public function setPasswordAttribute($value)
+    {
+        // Nếu $value là mảng hoặc stdClass, giữ nguyên
+        $this->attributes['password'] = Hash::make($value);
+    }
+    public function getTable()
+    {
+        return 'User';
+    }
 }
